[project]
name = "easy-pngtuber"
version = "1.0.0"
description = "AI生成画像の位置合わせと差分抽出ツール集"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "PySide6>=6.4.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[tool.uv]
package = false
